Home section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
         <div id="over">
             <div id="Home-content">
                 <h1>WELCOME TO EDYST LEARN CODING</h1>
-            </div>
+                <h3>Let's learn web developtment in a fun way.</h3>
+                     <div> <Button class="apply" type="button">Apply Here</Button></div>
+                     <div><Button class="register" type="button">Register for course</Button> </div>
+                     <span id="learn-more">Here you can learn to build beautiful websites <b>Learn more <span>&#62;</span></b> </span>            </div>
         </div>
     </div>
     
