Pokimon monster section half completed

--- a/index.html
+++ b/index.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
     <link rel="stylesheet" href="style.css">
     <title>Pokimon wiki</title>
-</head>
-<body>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
-    <div id = "header"> 
+</head>
+
+<body>
+    <div id="header">
         <div id="brand">
-           <img src="Images\Brand.png" width="85px" height="30px"  alt="Edyst" >
+            <img src="Images\Brand.png" width="85px" height="30px" alt="Edyst">
         </div>
-        <div id = "nav">
-            <a href="#"> <select style="background:none; color: #7f8c8d;"> Pokedex <option>  Pokedex  </option></select></a>
-            <a href="#"><select style="background:none;color: #7f8c8d;"> Pokedex <option>  Video games  </option></select></a>
+        <div id="nav">
+            <a href="#"> <select style="background:none; color: #7f8c8d;"> Pokedex <option> Pokedex </option>
+                    </select></a>
+            <a href="#"><select style="background:none;color: #7f8c8d;"> Pokedex <option> Video games </option>
+                    </select></a>
             <a href="#">ECard games</a>
             <a href="#">Pokemon TV</a>
             <a href="#">Pokemon Events</a>
-            <a href="#"><select style="background:none;color: #7f8c8d;"> Pokedex <option>  About Us  </option></select></a>
+            <a href="#"><select style="background:none;color: #7f8c8d;"> Pokedex <option> About Us </option>
+                    </select></a>
             <a href="#"><Button id="btn">Apply</Button></a>
             
         </div>
@@ -27,11 +33,28 @@
             <div id="Home-content">
                 <h1>WELCOME TO EDYST LEARN CODING</h1>
                 <h3>Let's learn web developtment in a fun way.</h3>
-                     <div> <Button class="apply" type="button">Apply Here</Button></div>
-                     <div><Button class="register" type="button">Register for course</Button> </div>
-                     <span id="learn-more">Here you can learn to build beautiful websites <b>Learn more <span>&#62;</span></b> </span>            </div>
+                <div> <Button class="apply" type="button">Apply Here</Button></div>
+                <div><Button class="register" type="button">Register for course</Button> </div>
+                <span id="learn-more">Here you can learn to build beautiful websites <b>Learn more
+                        <span>&#62;</span></b> </span>
+            </div>
         </div>
     </div>
-    
+
+    <div class="pocket-monster">
+        <div class="container-pocket">
+        <div class="p-header">
+            <div class="pocket-monster-header"><h2 id="monster-header">What are Pocket Monsters?</h2></div>
+        </div> 
+        <h4 class="pocket-monster-header2">Pokémon is a series of video games developed by Game Freak and published by Nintendo and The Pokémon Company as part of the Pokémon media franchise. Created by Satoshi Tajiri with assistance from Ken Sugimori,the first games released in 1996 in Japan for the Game Boy, and the main series of role-playing video games (RPGs), also referred as the "core series" by their developers
+        </h4>
+        <h4 style="margin-top:15px;" class="pocket-monster-header2">Let us know some  pokimon types</h4>
+    </div>
+   
+
+    </div>
+
+
 </body>
-</html> 
+
+</html>
